--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <img
           src="/logo.png"
           alt="InstaLoan Logo"
-          style="width: 300px; height: 100px; object-fit: cover"
+          
         />
       </a>
       <button
@@ -61,7 +61,7 @@
     <!-- Hero Section -->
     <section class="hero px-5">
       <div>
-        <h1 style="font-size: 4rem; font-weight: 800px; @media(max-width:768){}">Instant Loan upto 5  Lakh <br> in 5 minues from <br> <span class="text-higlight">Poonawalla , Fincorp etc.</span> </h1>
+        <h1 >Instant Loan upto 5  Lakh <br> in 5 minues from <br> <span class="section-title">Poonawalla , Fincorp etc.</span> </h1>
         <button class="hero-button  fs-4 mt-3 ">Apply Now</button>
       </div>
       <div>
@@ -153,6 +153,7 @@
                             </h1>
                         </div>
                         <div id="personalLoansContainer"></div>
+                        <button id="viewMoreBtn" class="btn btn-primary mt-4" style="display:none;">View More</button>
                     </div>
 
                     <!-- Business Loans Tab -->
@@ -180,163 +181,7 @@
     </div>
 
 
-    <!-- process -->
-    <section class="oceanic-hero mt-5">
-      <div class="quantum-particles">
-        <div class="quantum-particle"></div>
-        <div class="quantum-particle"></div>
-        <div class="quantum-particle"></div>
-      </div>
-
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-lg-10 col-xl-8">
-            <div class="text-center">
-              <h1 class="celestial-title">
-                Your Loan Application<br />
-                Made Easy in 4 Steps
-              </h1>
-            </div>
-
-            <div class="sapphire-process-container">
-              <div class="diamond-step-wrapper">
-                <!-- Step 1 -->
-                <div class="crystal-step-card">
-                  <div class="platinum-icon-circle">
-                    <img
-                      src="https://starpowerzdigiloans.com/assets/imgs/resources/wp_img_1.png"
-                      alt=""
-                    />
-                    <div class="emerald-step-number">1</div>
-                  </div>
-                  <h3 class="topaz-step-title">
-                    Share Customer's Loan Requirement Details
-                  </h3>
-                  <p class="amber-step-description">
-                    Provide your basic information and loan requirements to get
-                    started with our streamlined process.
-                  </p>
-                </div>
-
-                <div
-                  class="process-connector d-none d-lg-flex flex-column align-items-center"
-                >
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="60"
-                    height="60"
-                    viewBox="0 0 24 24"
-                    fill="none"
-                    stroke="white"
-                    stroke-width="1"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    class="lucide lucide-move-right-icon lucide-move-right"
-                  >
-                    <path d="M18 8L22 12L18 16" />
-                    <path d="M2 12H22" />
-                  </svg>
-                </div>
-
-                <!-- Step 2 -->
-                <div class="crystal-step-card">
-                  <div class="platinum-icon-circle">
-                    <img
-                      src="https://starpowerzdigiloans.com/assets/imgs/resources/wp_img_2.png"
-                      alt=""
-                    />
-                    <div class="emerald-step-number">2</div>
-                  </div>
-                  <h3 class="topaz-step-title">Get Matched Using AI Engine</h3>
-                  <p class="amber-step-description">
-                    Our advanced AI technology matches you with the best loan
-                    options tailored to your needs.
-                  </p>
-                </div>
-
-                <div
-                  class="process-connector d-none d-lg-flex flex-column align-items-center"
-                >
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="60"
-                    height="60"
-                    viewBox="0 0 24 24"
-                    fill="none"
-                    stroke="white"
-                    stroke-width="1"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    class="lucide lucide-move-right-icon lucide-move-right"
-                  >
-                    <path d="M18 8L22 12L18 16" />
-                    <path d="M2 12H22" />
-                  </svg>
-                </div>
-
-                <!-- Step 3 -->
-                <div class="crystal-step-card">
-                  <div class="platinum-icon-circle">
-                    <img
-                      src="https://starpowerzdigiloans.com/assets/imgs/resources/wp_img_3.png"
-                      alt=""
-                    />
-                    <div class="emerald-step-number">3</div>
-                  </div>
-                  <h3 class="topaz-step-title">
-                    Submit Application via Digital Platform
-                  </h3>
-                  <p class="amber-step-description">
-                    Complete your application through our secure digital
-                    platform with just a few clicks.
-                  </p>
-                </div>
-
-                <div
-                  class="process-connector d-none d-lg-flex flex-column align-items-center"
-                >
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="60"
-                    height="60"
-                    viewBox="0 0 24 24"
-                    fill="none"
-                    stroke="white"
-                    stroke-width="1"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    class="lucide lucide-move-right-icon lucide-move-right"
-                  >
-                    <path d="M18 8L22 12L18 16" />
-                    <path d="M2 12H22" />
-                  </svg>
-                </div>
-
-                <!-- Step 4 -->
-                <div class="crystal-step-card">
-                  <div class="platinum-icon-circle">
-                    <img
-                      src="https://starpowerzdigiloans.com/assets/imgs/resources/wp_img_4.png"
-                      alt=""
-                    />
-                    <div class="emerald-step-number">4</div>
-                  </div>
-                  <h3 class="topaz-step-title">
-                    Track and Receive Instant Loan Sanction
-                  </h3>
-                  <p class="amber-step-description">
-                    Monitor your application status and receive instant approval
-                    notifications directly to your device.
-                  </p>
-                </div>
-              </div>
-            </div>
-
-            
-          </div>
-        </div>
-      </div>
-    </section>
+ 
 
     <!-- thousand of customers -->
     <div class="hero-section">
