--- a/index.html
+++ b/index.html
@@ -107,24 +107,21 @@
 
               <div class="dl-main-profile mt-3">
                 <img
-                  src="https://plus.unsplash.com/premium_photo-1689977927774-401b12d137d6?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                  src="https://img.freepik.com/premium-photo/office-staff-posing-front-camera_658385-28.jpg"
                   alt="Professional man in business attire"
-                  class="img-fluid"
+                  class="img-fluid "
                 />
               </div>
 
-              <div class="dl-secondary-profile">
-                <img
-                  src="https://plus.unsplash.com/premium_photo-1689551670902-19b441a6afde?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-                  alt="Professional woman working"
-                  class="img-fluid"
-                />
-              </div>
             </div>
           </div>
         </div>
       </div>
     </section>
+
+
+    
+
 
     <!-- Loan offer listings -->
      <div class="container-fluid py-5" id="loans">
@@ -578,6 +575,73 @@ document.addEventListener('DOMContentLoaded', function() {
       alert('Thank you for contacting us!');
       closeContactModal();
       contactForm.reset();
+    });
+  }
+});
+</script>
+
+<!-- Loan Application Modal -->
+<div id="loanModal" class="modal" tabindex="-1" style="display:none;">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content p-4">
+      <span class="close" onclick="closeLoanModal()" style="position:absolute;top:12px;right:18px;font-size:2rem;cursor:pointer;">&times;</span>
+      <h4 class="mb-3">
+        Applying for <span id="modalVendorName"></span><br>
+        <small>Interest Rate: <span id="modalInterestRate"></span></small>
+      </h4>
+      <form id="loanApplicationForm">
+        <div class="mb-3">
+          <label for="fullName" class="form-label">Full Name</label>
+          <input type="text" class="form-control" id="fullName" required>
+        </div>
+        <div class="mb-3">
+          <label for="mobileNo" class="form-label">Mobile No</label>
+          <input type="tel" class="form-control" id="mobileNo" required pattern="[0-9]{10}">
+        </div>
+        <div class="mb-3">
+          <label for="emailId" class="form-label">Email ID</label>
+          <input type="email" class="form-control" id="emailId" required>
+        </div>
+        <div class="form-check mb-3">
+          <input type="checkbox" class="form-check-input" id="acceptPolicy" required>
+          <label class="form-check-label" for="acceptPolicy">
+            I accept <a href="#">Privacy Policy</a> and <a href="#">Terms & Conditions</a>
+          </label>
+        </div>
+        <button type="submit" class="btn btn-primary w-100">Apply</button>
+      </form>
+    </div>
+  </div>
+</div>
+
+<script>
+function openLoanModal(vendorName, interestRate) {
+  document.getElementById('modalVendorName').innerText = vendorName;
+  document.getElementById('modalInterestRate').innerText = interestRate + '%';
+  document.getElementById('loanModal').style.display = 'block';
+}
+
+function closeLoanModal() {
+  document.getElementById('loanModal').style.display = 'none';
+}
+
+// Optional: Close modal when clicking outside the modal content
+window.addEventListener('click', function(e) {
+  const modal = document.getElementById('loanModal');
+  if (e.target === modal) {
+    closeLoanModal();
+  }
+});
+
+// Handle loan application form submission
+document.addEventListener('DOMContentLoaded', function() {
+  const loanApplicationForm = document.getElementById('loanApplicationForm');
+  if (loanApplicationForm) {
+    loanApplicationForm.addEventListener('submit', function(e) {
+      e.preventDefault();
+      alert('Loan application submitted successfully!');
+      closeLoanModal();
+      loanApplicationForm.reset();
     });
   }
 });
