--- a/index.html
+++ b/index.html
@@ -655,7 +655,7 @@ document.addEventListener('DOMContentLoaded', function() {
 <script>
 function openLoanModal(vendorName, interestRate) {
   document.getElementById('modalVendorName').innerText = vendorName;
-  document.getElementById('modalInterestRate').innerText = interestRate + '%';
+  document.getElementById('modalInterestRate').innerText = interestRate ;
   document.getElementById('loanModal').style.display = 'block';
 }
 
