--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
    
 
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light px-5" id="home">
+    <nav class="navbar navbar-expand-lg navbar-light px-lg-5" id="home">
       <a class="navbar-brand" href="#">
         <img
           src="/logo.png"
