--- a/index.html
+++ b/index.html
@@ -102,12 +102,13 @@
                 InstaLoan range of financial products has continuously
                innovated to cater to your personal and business needs. <br> 
                 This includes : <br>
-                <strong>personal loans, business loans, home loans,<br> 
-                auto loans, gold loans, education loans, <br>
-                  insurance, credit cards, mortgage loans,<br> 
-                 working capital, commercial vehicle loans,commercial equipment loans,
-                 <br> medical equipment loans, solar
-                 equipment loans, industrial equipment loans, loan</strong>
+                <strong>Personal Loans, Business Loans, Home Loans,<br> 
+                Auto Loans, Gold Loans, Education Loans, <br>
+                  Insurance, Credit 
+                  Cards, Mortgage Loans,<br> 
+                 Working Capital, Commercial Vehicle Loans,Commercial Equipment Loans,
+                 <br> Medical Equipment Loans, Solar
+                 Equipment Loans, Industrial Equipment Loans</strong>
                  against
                 securities.
               </p>
