--- a/index.html
+++ b/index.html
@@ -42,14 +42,12 @@
           <li class="nav-item">
             <a class="nav-link" href="#about">About Us</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#services">Services</a>
-          </li>
+        
           <li class="nav-item">
             <a class="nav-link" href="#loans">Loans</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#Calculator">Calculator</a>
+            <a class="nav-link" href="#Calculator"> EMI Calculator</a>
           </li>
           <li class=" partner-btn  ">
             <a class="  text-white" href="#">Become a partner</a>
@@ -94,7 +92,7 @@
           <div class="col-lg-6 col-md-6 dl-content-wrapper">
             <div class="px-4 px-lg-5">
               <h1 class="dl-title-primary">
-                Why you<br />
+                Why you
                 Should Partner<br />
                 With Us ?
               </h1>
@@ -102,15 +100,14 @@
                 InstaLoan range of financial products has continuously
                innovated to cater to your personal and business needs. <br> 
                 This includes : <br>
-                <strong>Personal Loans, Business Loans, Home Loans,<br> 
-                Auto Loans, Gold Loans, Education Loans, <br>
-                  Insurance, Credit 
-                  Cards, Mortgage Loans,<br> 
-                 Working Capital, Commercial Vehicle Loans,Commercial Equipment Loans,
-                 <br> Medical Equipment Loans, Solar
-                 Equipment Loans, Industrial Equipment Loans</strong>
-                 against
-                securities.
+                <strong> <span><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-arrow-right-icon lucide-arrow-right"><path d="M5 12h14"/><path d="m12 5 7 7-7 7"/></svg></span>Personal Loans, Business Loans, Home Loans<br> 
+                 <span><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-arrow-right-icon lucide-arrow-right"><path d="M5 12h14"/><path d="m12 5 7 7-7 7"/></svg></span>Auto Loans, Gold Loans, Education Loans <br>
+                  <span><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-arrow-right-icon lucide-arrow-right"><path d="M5 12h14"/><path d="m12 5 7 7-7 7"/></svg></span>Insurance, Credit 
+                  Cards, Mortgage Loans<br> 
+                 <span><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-arrow-right-icon lucide-arrow-right"><path d="M5 12h14"/><path d="m12 5 7 7-7 7"/></svg></span>Working Capital, Commercial Vehicle Loans
+                 <br><span><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-arrow-right-icon lucide-arrow-right"><path d="M5 12h14"/><path d="m12 5 7 7-7 7"/></svg></span> Medical Equipment Loans, Solar
+          Equipment Loans</strong> <br>
+                  against securities.
               </p>
           
             </div>
@@ -146,7 +143,7 @@
                 <!-- Navigation Tabs -->
                 <ul class="nav nav-tabs justify-content-center mb-5" id="loanTabs">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#personal" data-bs-toggle="tab">Personal Loans</a>
+                        <a class="nav-link active" href="#personal" data-bs-toggle="tab">Instant Loans</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#business" data-bs-toggle="tab">Business Loans</a>
@@ -155,7 +152,7 @@
                         <a class="nav-link" href="#emi" data-bs-toggle="tab">EMI Cards</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#emi" data-bs-toggle="tab">Credit Cards and Others</a>
+                        <a class="nav-link" href="#credit" data-bs-toggle="tab">Credit Cards</a>
                     </li>
                 </ul>
 
@@ -165,7 +162,7 @@
                     <div class="tab-pane fade show active" id="personal">
                         <div class="text-center mb-5">
                             <h1 class="display-5 fw-bold mb-3">
-                                Best <span class="section-title">Personal Loan</span> Offers at Your Fingertips!
+                                Best <span class="section-title">Instant Loan</span> Offers at Your Fingertips!
                             </h1>
                         </div>
                         <div id="personalLoansContainer"></div>
@@ -190,6 +187,16 @@
                             </h1>
                         </div>
                         <div id="emiCardsContainer"></div>
+                    </div>
+
+                    <!-- credit card -->
+                     <div class="tab-pane fade" id="credit">
+                        <div class="text-center mb-5">
+                            <h1 class="display-5 fw-bold mb-3">
+                                Best <span class="section-title">Credit Card</span> Offers at Your Fingertips!
+                            </h1>
+                        </div>
+                        <div id="creditCardsContainer"></div>
                     </div>
                 </div>
             </div>
@@ -423,7 +430,7 @@
                     </div>
                 </div>
 
-                <button class="apply-button">Apply For Loan</button>
+                <button class="apply-button" id="calculatorApplyBtn">Apply For Loan</button>
             </div>
         </div>
     </div>
