--- a/index.html
+++ b/index.html
@@ -162,11 +162,23 @@
                     <div class="tab-pane fade show active" id="personal">
                         <div class="text-center mb-5">
                             <h1 class="display-5 fw-bold mb-3">
-                                Best <span class="section-title">Instant Loan</span> Offers at Your Fingertips!
+                                Best <span class="section-title">Intant Loan</span> Offers at Your Fingertips!
                             </h1>
                         </div>
                         <div id="personalLoansContainer"></div>
                         <button id="viewMoreBtn" class="btn btn-primary mt-4" style="display:none;">View More</button>
+
+                   <div class="text-center mt-4 mb-5">
+  <span style="color: #e53935; font-weight: bold; font-size: 1.1rem; background: #fff3f3; padding: 10px 24px; border-radius: 8px; display: inline-block;">
+    Coming soon :
+     Home Loan , Mortgage Loan ,
+     Auto Loan ,
+     Commercial Purchase Loan ,
+     Overdraft (OD) Limit ,
+     Construction Loan.
+  </span>
+</div>
+
                     </div>
 
                     <!-- Business Loans Tab -->
