credit card updated

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
   <span style="color: #e53935; font-weight: bold; font-size: 1.1rem; background: #fff3f3; padding: 10px 24px; border-radius: 8px; display: inline-block;">
     Coming soon :
      Home Loan , Mortgage Loan ,
-     Auto Loan ,
+     Auto Loan 
      Commercial Purchase Loan ,
      Overdraft (OD) Limit ,
      Construction Loan.
