--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                             <span class="dl-typed-text" id="dlTypedText"></span>
                             <span class="dl-typing-cursor"></span>
                         </div>
-                        <button class="btn dl-btn-applys "" onclick="openContactModal()">Join as a DSA Partner</button>
+                        <button class="btn dl-btn-applys " onclick="openContactModal()">Join as a DSA Partner</button>
                     </div>
                 </div>
             </div>
@@ -483,7 +483,7 @@
                 
                 <div class="col-lg-3 col-md-6 col-12">
                     <div class="stat-item">
-                        <div class="stat-number" data-target="200" data-suffix=" ">0</div>
+                        <div class="stat-number" data-target="200" data-suffix="+">0</div>
                         <div class="stat-label">Team members</div>
                     </div>
                 </div>
