--- a/index.html
+++ b/index.html
@@ -710,18 +710,22 @@
     <footer class="footer">
       <div class="container">
         <div class="row">
-          <div class="col-lg-4 col-md-6 mb-4">
+          <div class="col-lg-4 col-md-6 mb-1">
             <h5>InstaLoan</h5>
             <p style="color: #adb5bd">
               An initiative by Instant Loan Bazaar, providing quick and reliable
               financial solutions across India.
             </p>
+            <p  style="color: #adb5bd"><span style="color: #adb5bd ;font-size:16px; font-weight:bold">GST Number :</span> 24ECKPK4875B1ZK</p>
+            <p  style="color: #adb5bd"><span  style="color: #adb5bd ;font-weight:bold; font-size:16px">Address :</span> Suman Uday apartment opp SD jain college vesu surat Gujarat 395007</p>
+
             <div class="d-flex gap-3">
               <a href="#"><i class="fab fa-facebook"></i></a>
               <a href="#"><i class="fab fa-twitter"></i></a>
               <a href="#"><i class="fab fa-linkedin"></i></a>
               <a href="#"><i class="fab fa-instagram"></i></a>
             </div>
+
           </div>
 
           <div class="col-lg-2 col-md-6 mb-4">
@@ -737,7 +741,7 @@
           <div class="col-lg-3 col-md-6 mb-4">
             <h5>Loan Services</h5>
             <ul class="list-unstyled">
-              <li><a href="#loans">Instant Loan Loan</a></li>
+              <li><a href="#loans">Instant Loan</a></li>
               <li><a href="#loans">Business Loan</a></li>
               <li><a href="#loans">Credit Card</a></li>
         
