--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light px-lg-5" id="home">
+    <nav class="navbar navbar-expand-lg  px-lg-5" id="home">
       <a class="navbar-brand" href="#">
         <img src="/logo.png" alt="InstaLoan Logo" />
       </a>
@@ -57,7 +57,7 @@
           <div class="col-lg-10">
             <div class="dl-hero-content">
               <h1 class="dl-main-title">
-                Find the perfect<br />
+                Find the perfect <br>
                 Financial Solutions for<br />
                 Your
               </h1>
@@ -188,11 +188,12 @@
 
               <div class="dl-main-profile mt-3">
                 <img
-                  src="https://img.freepik.com/premium-photo/office-staff-posing-front-camera_658385-28.jpg"
+                  src="./images/man.png"
                   alt="Professional man in business attire"
                   class="img-fluid"
                 />
               </div>
+              
             </div>
           </div>
         </div>
@@ -706,59 +707,87 @@
       </div>
     </section>
 
-  <!-- Footer -->
-    <footer class="footer">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-4 col-md-6 mb-1">
-            <h5>InstaLoan</h5>
-            <p style="color: #adb5bd">
-              An initiative by Instant Loan Bazaar, providing quick and reliable
-              financial solutions across India.
-            </p>
-            <p  style="color: #adb5bd"><span style="color: #adb5bd ;font-size:16px; font-weight:bold">GST Number :</span> 24ECKPK4875B1ZK</p>
-            <p  style="color: #adb5bd"><span  style="color: #adb5bd ;font-weight:bold; font-size:16px">Address :</span> Suman Uday apartment opp SD jain college vesu surat Gujarat 395007</p>
+ <footer class="footer mt-5">
+  <div class="container">
+    <div class="row footer-row">
 
-            <div class="d-flex gap-3">
-              <a href="#"><i class="fab fa-facebook"></i></a>
-              <a href="#"><i class="fab fa-twitter"></i></a>
-              <a href="#"><i class="fab fa-linkedin"></i></a>
-              <a href="#"><i class="fab fa-instagram"></i></a>
-            </div>
-
-          </div>
-
-          <div class="col-lg-2 col-md-6 mb-4">
-            <h5>Quick Links</h5>
-            <ul class="list-unstyled">
-              <li><a href="#home">Home</a></li>
-              <li><a href="#about">About Us</a></li>
-              <li><a href="#Calculator">EMI Calculater</a></li>
-            <li><a href="#home">Join as a DSA Partner</a></li>
-            </ul>
-          </div>
-
-          <div class="col-lg-3 col-md-6 mb-4">
-            <h5>Loan Services</h5>
-            <ul class="list-unstyled">
-              <li><a href="#loans">Instant Loan</a></li>
-              <li><a href="#loans">Business Loan</a></li>
-              <li><a href="#loans">Credit Card</a></li>
-        
-            </ul>
-          </div>
-        </div>
-
-        <div class="footer-bottom">
-          <p>
-            &copy; 2025 InstaLoan. All rights reserved. | An Initiative by
-            Instant Loan Bazaar
-          </p>
+      <!-- About -->
+      <div class="footer-col">
+        <h5>About</h5>
+        <p style="color: #adb5bd">
+          Providing quick and reliable financial solutions across India.
+        </p>
+        <p style="color: #adb5bd">
+          <span style="font-size:16px; font-weight:bold">Cotton Master :</span> GST No.(24ECKPK4875B1ZK)
+        </p>
+        <p style="color: #adb5bd">
+          <span style="font-weight:bold; font-size:16px">Address :</span> Suman Uday Apartment Opp SD jain college Vesu Surat Gujarat 395007
+        </p>
+        <div class="d-flex gap-3">
+          <a href="#"><i class="fab fa-facebook"></i></a>
+          <a href="#"><i class="fab fa-twitter"></i></a>
+          <a href="#"><i class="fab fa-linkedin"></i></a>
+          <a href="#"><i class="fab fa-instagram"></i></a>
         </div>
       </div>
-    </footer>
 
-   
+      <!-- Quick Links -->
+      <div class="footer-col">
+        <h5>Quick Links</h5>
+        <ul class="list-unstyled">
+          <li><a href="#home">Home</a></li>
+          <li><a href="#about">About Us</a></li>
+          <li><a href="#Calculator">EMI Calculator</a></li>
+          <li><a href="#home">Join as a DSA Partner</a></li>
+        </ul>
+      </div>
+
+      <!-- Loan Services -->
+      <div class="footer-col">
+        <h5>Loan Services</h5>
+        <ul class="list-unstyled">
+          <li><a href="#loans">Instant Loan</a></li>
+          <li><a href="#loans">Personal Loan</a></li>
+          <li><a href="#loans">Business Loan</a></li>
+          <li><a href="#loans">Credit Card</a></li>
+          <li><a href="#loans">Gold Loan</a></li>
+          <li><a href="#loans">Auto Loan</a></li>
+          <li><a href="#loans">Education Loan</a></li>
+        </ul>
+      </div>
+
+      <!-- Associate Partner -->
+      <div class="footer-col">
+        <h5>Associate Partner</h5>
+        <p style="color: #adb5bd"><strong>Timing:</strong> 10:00 AM TO 7:00 PM</p>
+        <ul class="list-unstyled">
+          <li><a href="#">Bvalue Services Pvt. Ltd.</a></li>
+          <li><a href="#">Starpowerz Digiloans Pvt. Ltd.</a></li>
+        </ul>
+      </div>
+
+      <!-- Contact Us -->
+      <div class="footer-col">
+        <h5>Contact Us</h5>
+        <ul class="list-unstyled">
+          <li>Email: info@instantloanbazaar.com</li>
+          <li>Phone: +91 9909990564</li>
+        </ul>
+      </div>
+
+    </div>
+
+    <div class="footer-bottom">
+      <div class="site-infor-col">
+        Copyright © 2025 Insta loan Designed & Developed By 
+        <a href="https://digitalutilization.com/">SEO Company In Noida</a>
+      </div>
+    </div>
+  </div>
+</footer>
+
+
+
     <!-- Contact Modal -->
     <div id="contactModal" class="modal" tabindex="-1" style="display: none">
       <div class="modal-dialog modal-dialog-centered">
@@ -875,10 +904,10 @@
               <label for="fullName" class="form-label">Full Name</label>
               <input type="text" class="form-control" id="fullName" required />
             </div>
-            <div class="mb-3">
+            <!-- <div class="mb-3">
               <label for="emailId" class="form-label">Email</label>
               <input type="email" class="form-control" id="emailId" required />
-            </div>
+            </div> -->
             <div class="mb-3">
               <label for="mobileNo" class="form-label">Phone</label>
               <input
@@ -893,7 +922,7 @@
               <label for="pan" class="form-label">PAN</label>
               <input type="text" class="form-control" id="pan" maxlength="10" required />
             </div>
-            <div class="mb-3">
+            <!-- <div class="mb-3">
               <label for="aadhaar" class="form-label">Aadhaar</label>
               <input type="text" class="form-control" id="aadhaar" maxlength="12" required />
             </div>
@@ -925,7 +954,7 @@
                 I accept <a href="#">Privacy Policy</a> and
                 <a href="#">Terms & Conditions</a>
               </label>
-            </div>
+            </div> -->
             <button type="submit" class="btn btn-primary w-100">Apply</button>
           </form>
         </div>
