--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <div class="col-lg-10">
             <div class="dl-hero-content">
               <h1 class="dl-main-title">
-                Find the perfect <br>
+                Find the perfect 
                 Financial Solutions for<br />
                 Your
               </h1>
