--- a/index.html
+++ b/index.html
@@ -770,8 +770,8 @@
       <div class="footer-col">
         <h5>Contact Us</h5>
         <ul class="list-unstyled">
-          <li>Email: info@instantloanbazaar.com</li>
-          <li>Phone: +91 9909990564</li>
+          <li style="color: #adb5bd">info@instantloanbazaar.com</li>
+          <li style="color: #adb5bd"> +91 9909990564</li>
         </ul>
       </div>
 
