personal loan added

--- a/index.html
+++ b/index.html
@@ -198,12 +198,12 @@
                   Your Fingertips!
                 </h1>
               </div>
-              <div id="personalLoansContainer"></div>
+              <div id="instantLoansContainer"></div>
               <button
                 id="viewMoreBtn"
                 class="btn btn-primary mt-4"
                 style="display: none"
-              >
+            >
                 View More
               </button>
             </div>
