privacy policies updaated

--- a/index.html
+++ b/index.html
@@ -971,6 +971,19 @@
               />
             </div>
 
+             <div class="form-check mb-3">
+              <input
+                type="checkbox"
+                class="form-check-input"
+                id="acceptPolicy"
+                required
+              />
+              <label class="form-check-label" for="acceptPolicy">
+                I accept <a href="#">Privacy Policy</a> and
+                <a href="#">Terms & Conditions</a>
+              </label>
+            </div>
+
             <button type="submit" class="btn btn-primary w-100">
               Apply/Login
             </button>
