--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                                     <path d="M5 12h14"></path>
                                     <path d="m12 5 7 7-7 7"></path>
                                 </svg>
-                                Auto Loans, Mortgage Loans, Education Loans
+                                EMI Cards, Credit Cards,Education Loans
                             </li>
                             </li>
                             <li class="service-item">
@@ -118,7 +118,7 @@
                                     <path d="M5 12h14"></path>
                                     <path d="m12 5 7 7-7 7"></path>
                                 </svg>
-                               Gold Loan, EMI Cards, Credit Cards, 
+                               Home Loan, Mortgage Cards, Credit Cards, 
                             <li class="service-item">
                                 <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                     <path d="M5 12h14"></path>
