--- a/index.html
+++ b/index.html
@@ -765,8 +765,8 @@
           <div class="footer-col">
             <h5>Contact Us</h5>
             <ul class="list-unstyled">
-              <li style="color: #adb5bd">info@instantloanbazaar.com</li>
-              <li style="color: #adb5bd">+91 9909990564</li>
+              <li style="color: #adb5bd;display:flex ; gap: 5px;"><span><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-mail-icon lucide-mail"><path d="m22 7-8.991 5.727a2 2 0 0 1-2.009 0L2 7"/><rect x="2" y="4" width="20" height="16" rx="2"/></svg></span> info@instantloanbazaar.com</li>
+              <li style="color: #adb5bd ; display:flex ; gap: 5px;"> <span><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-phone-call-icon lucide-phone-call"><path d="M13 2a9 9 0 0 1 9 9"/><path d="M13 6a5 5 0 0 1 5 5"/><path d="M13.832 16.568a1 1 0 0 0 1.213-.303l.355-.465A2 2 0 0 1 17 15h3a2 2 0 0 1 2 2v3a2 2 0 0 1-2 2A18 18 0 0 1 2 4a2 2 0 0 1 2-2h3a2 2 0 0 1 2 2v3a2 2 0 0 1-.8 1.6l-.468.351a1 1 0 0 0-.292 1.233 14 14 0 0 0 6.392 6.384"/></svg></span> +91 9909990564</li>
             </ul>
           </div>
         </div>
