--- a/index.html
+++ b/index.html
@@ -752,7 +752,7 @@
           <!-- Associate Partner -->
           <div class="footer-col">
             <h5>Timing</h5>
-            <p style="color: #adb5bd">10:00 AM TO 7:00 PM</p>
+        <p style="color: #adb5bd">10:00 AM TO 7:00 PM <br>Monday To Saturday : open  <br>Sunday : Closed </p>
             <h5>Associate Partner</h5>
 
             <ul class="list-unstyled">
