--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         With Us ?
                     </h1>
                     <div class="description-text">
-                       <strong> Instant Loan Bazaar</strong> range of financial products has continuously innovated
+                       <strong></strong> Instant Loan Bazaar range of financial products has continuously innovated
                         to cater to your personal and business needs.
                         <br><br>
                         <strong>This includes:</strong>
@@ -677,9 +677,9 @@
             </div>
 
             <p class="testimonial-review-text">
-              I was impressed by the clarity and speed of service. Comparing
+              "I was impressed by the clarity and speed of service. Comparing
               offers from multiple lenders helped me find the best deal. Star
-              Powerz made home renovation financing easy and reliable.
+              Powerz made home renovation financing easy and reliable."
             </p>
 
             <div class="testimonial-navigation-dots">
@@ -689,8 +689,8 @@
             </div>
 
             <div class="testimonial-arrow-controls">
-              <button class="testimonial-arrow-btn" id="prevBtn">‹</button>
-              <button class="testimonial-arrow-btn" id="nextBtn">›</button>
+              <button class="testimonial-arrow-btn" id="prevBtn"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-chevron-left-icon lucide-chevron-left"><path d="m15 18-6-6 6-6"/></svg></button>
+              <button class="testimonial-arrow-btn" id="nextBtn"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-chevron-right-icon lucide-chevron-right"><path d="m9 18 6-6-6-6"/></svg></button>
             </div>
           </div>
         </div>
