--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         With Us ?
                     </h1>
                     <div class="description-text">
-                       <strong></strong> Instant Loan Bazaar range of financial products has continuously innovated
+                       <strong>Instant Loan Bazaar </strong> range of financial products has continuously innovated
                         to cater to your personal and business needs.
                         <br><br>
                         <strong>This includes:</strong>
@@ -773,7 +773,7 @@
 
         <div class="footer-bottom">
           <div class="site-infor-col">
-            Copyright © 2025 Insta loan Designed & Developed By
+            Copyright © 2025 Instant Loan Bazaar  Designed & Developed By
             <a href="https://digitalutilization.com/">SEO Company In Noida</a>
           </div>
         </div>
