--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
     </div>
 
     <!-- calculator  -->
-    <div class="loan-calculator-container m-auto mt-5">
+    <div class="loan-calculator-container m-auto mt-5" id="Calculator">
       <div class="calculator-header">
         <h1>How much do you need loan for you?</h1>
         <p>Calculate your loan EMI with our interactive calculator</p>
